--- a/src/main/resources/templates/movieProductSearch.html
+++ b/src/main/resources/templates/movieProductSearch.html
@@ -227,7 +227,7 @@
 
 
 <div class="center">
-    <p th:text="${messageSearch}" style="color: red; font-family: poppins; font-weight: bold; font-size: 30px;"></p>
+    <p th:text="${messageSearch}" style="color: white; font-family: poppins; font-weight: bold;"></p>
 
 </div>
 
