--- a/src/main/resources/templates/addFriends.html
+++ b/src/main/resources/templates/addFriends.html
@@ -8,13 +8,14 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
     <style>
-        body{
+        body {
             margin: 0;
         }
 
-        #background{
+        #background {
             background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
             height: 100vh;
             width: 100%;
@@ -24,13 +25,110 @@
             top: 0;
             z-index: -1;
         }
-        .username-container{
-            justify-content: center;
-            padding-top: 10px;
-            display: flex;
+
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            margin-top: 150px;
         }
-        #username{
-            width:50%
+
+        .notBought{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 300px;
+            font-weight: bold;
+        }
+
+        h1{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
+        }
+
+        p, label, input, td, tr{
+
+            font-family: poppins;
+            font-size: 15px;
+            color: white;
+            font-weight: bold;
+        }
+        .alert {
+            width:40%;
+        }
+
+        .form-control {
+            width: 100%;
+            padding: 10px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+        }
+
+        .btn-danger, .btn {
+            width: 100%;
+            padding: 12px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+        }
+
+        .btn-danger {
+            background-color: #dc3545;
+            color: white;
+        }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+        }
+
+        .card {
+            border-radius: 15px;
+            background: rgba(0, 0, 0, 0.8);
+            margin-bottom: 20px;
+            width: 100%;
+            outline-style: solid;
+            outline-color: darkred;
+        }
+
+        .card-body {
+            padding: 20px;
+            color:white;
+        }
+
+        .card img {
+            width: 180px;
+            border-radius: 10px;
+        }
+        .search-form {
+            width: 50%;
+            margin: 0 auto;
+            text-align: center;
+        }
+
+        .form-floating {
+            width: 100%;
+        }
+        .form-floating label {
+            text-align: left;
+        }
+        h4{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 50px;
+            color: white;
+            font-weight: bold;
+            -webkit-text-stroke: 1px darkred;
+            font-family: poppins;
         }
 
     </style>
@@ -44,17 +142,17 @@
 <div th:if="${#ctx.session.loggedInUser != null}">
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
     <h4>Add friends</h4>
-    <form method="get" action="/searchForFriends">
+    <form method="get" action="/searchForFriends" class="search-form">
         <div style="text-align: center;" class="username-container">
             <input type="text" class="form-control" id="username" name="username" placeholder="Enter Username" required>
             <label for="username">Enter Username</label>
         </div>
-        <input type="submit" value="Search" class="btn btn-primary">
+        <input type="submit" value="Search" class="btn btn-danger">
     </form>
 
 <!-- https://www.baeldung.com/thymeleaf-iteration -->
         <div th:each="u, istatus : ${username}">
-            <div class="row d-flex justify-content-center">
+            <div class="container mt-5">
                 <div class="col col-md-9 col-lg-7 col-xl-6">
                     <div class="card" style="border-radius: 15px;">
                         <div class="card-body p-4">
@@ -75,7 +173,7 @@
                                         <div class="d-flex pt-1">
                                             <input type="hidden" name="friendUsername" th:value="${u.getUsername()}"/>
                                             <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                                                    class="btn btn-primary flex-grow-1">Add friend
+                                                    class="btn btn-danger flex-grow-1">Add friend
                                             </button>
                                         </div>
                                     </form>
@@ -100,6 +198,6 @@
             </div>
         </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
