--- a/src/main/resources/templates/notifications.html
+++ b/src/main/resources/templates/notifications.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
     <style>
         body{
             margin: 0;
@@ -55,6 +57,13 @@
             -webkit-text-stroke: 1px darkred;
             font-family: poppins;
         }
+        .alert {
+            width:40%;
+            position: relative;
+            top: 50%;
+            text-align: center;
+            left: 27%;
+        }
     </style>
 </head>
 <body>
@@ -70,7 +79,7 @@
 
 
         <div th:each="request : ${pendingRequests}">
-            <div class="alert alert-primary" role="alert">
+            <div class="alert alert-dark" role="alert">
                 <p th:text="'You have received a request from ' + ${request.friend1}"></p>
                 <form method="post" action="/acceptFriendRequest">
                     <input type="hidden" name="fromUsername" th:value="${request.friend1}">
