--- a/src/main/resources/templates/review_form.html
+++ b/src/main/resources/templates/review_form.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Submit a Review</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
 </head>
 <body>
