--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
 
   <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
@@ -192,6 +194,16 @@
       top: 0;
       z-index: -1;
     }
+
+    .message{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: red;
+      font-weight: bold;
+      margin-bottom: 50px;
+      font-family: poppins;
+    }
   </style>
 </head>
 
@@ -206,6 +218,9 @@
 <div>
   <h1>Most Popular Movies</h1>
 </div>
+
+
+  <div id="message" class="message" th:text="${message}"></div>
 
   <div class="dropdown" style="margin-top: 50px; margin-left: 50px;">
     <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -285,6 +300,10 @@
             <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
             <a th:href="@{/writeReview(movieId=${movie.id}, movieTitle=${movie.title})}" class="btn btn-danger btn-sm">
               Write a Review
+            </a>
+
+            <a th:href="@{/addMovieFavList(movieId=${movie.id}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"class="remove_cart" rel="2" >
+              <i class="fas fa-heart"></i>
             </a>
 
           </div>
