--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -51,6 +51,7 @@
             overflow: hidden;
             box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
             transition: transform .5s;
+            width: 400px;
         }
 
         .box:hover {
