--- a/src/main/resources/templates/chatRoom.html
+++ b/src/main/resources/templates/chatRoom.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/css/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -110,7 +110,7 @@
 
   </style>
 
-<!--
+
   <style>
 
     .hidden {
@@ -146,10 +146,9 @@
       right: 0;
       margin: 0 auto;
       margin-top: -160px;
-      /*margin-left: 1300px;
+      /*position: fixed;
 
        */
-      position: fixed;
     }
 
     .username-page-container .username-submit {
@@ -161,7 +160,7 @@
       text-align: center;
     }
 
-    .chat-container {
+    .container {
       background: #fff;
       box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
       border-radius: 2px;
@@ -176,10 +175,11 @@
       left: 0;
       right: 0;
       margin: 0 auto;
-      margin-top: -160px;
-      margin-left: 1170px;
+      margin-top: 70px;
       margin-bottom: 30px;
-      position: fixed;
+      /*position: fixed;
+
+       */
       height: 500px;
     }
 
@@ -332,80 +332,67 @@
 
   </style>
 
-  -->
-
 
 </head>
 <body>
 
 <div id="background"></div>
 
-  <!-- Include the menu bar fragment -->
-  <div th:replace="~{fragments/menu :: menu-bar}"></div>
+<!-- Include the menu bar fragment -->
+<div th:replace="~{fragments/menu :: menu-bar}"></div>
 
-  <div>
-  <h1 th:text="| Movie Videos for ${movieName} |">Movie Videos</h1>
-  </div>
-
-
-
-  <div style="width: 600px;" class="center">
-  <div th:each="trailer : ${trailers}">
-    <iframe width="100%" height="345" th:src=" | https://www.youtube.com/embed/${trailer.getKey()} |" allowFullScreen></iframe>
-    <br>
-    <br>
-  </div>
-  </div>
-
-
-
-<!--
-
-  <div id="username-page">
-    <div class="username-page-container">
-      <h1 class="title" style="color: black">The Chatroom</h1>
-      <form id="usernameForm" name="usernameForm">
-        <div class="form-group">
-          <input type="hidden" id="name" th:value="${#ctx.session.loggedInUser.getDisplayName()}" placeholder="Username" autocomplete="off" class="form-control" />
-        </div>
-        <div class="form-group">
-          <button type="submit" class="btn btn-danger" >Enter Live Chat</button>
-        </div>
-      </form>
-    </div>
-  </div>
+<div>
+  <h1>Live Screen Safari Chat Room</h1>
+</div>
 
 
 
 
-
-  <div id="chat-page" class="hidden">
-    <div class="chat-container">
-      <div class="chat-header">
-        <h1 style="color: black">Live Chat </h1>
+<div id="username-page">
+  <div class="username-page-container">
+    <h1 class="title" style="color: black">The Chatroom</h1>
+    <form id="usernameForm" name="usernameForm">
+      <div class="form-group">
+        <input type="hidden" id="name" th:value="${#ctx.session.loggedInUser.getDisplayName()}" placeholder="Username" autocomplete="off" class="form-control" />
       </div>
-      <div class="connecting">
-        Connecting...
+      <div class="form-group">
+        <button type="submit" class="btn btn-danger" >Enter Live Chat</button>
       </div>
-      <ul id="messageArea">
-
-      </ul>
-      <form id="messageForm" name="messageForm">
-        <div class="form-group">
-          <div class="input-group clearfix">
-            <input style="margin-top:10px; " type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
-            <button style="margin-top:10px; " type="submit" class="btn btn-danger">Send</button>
-          </div>
-        </div>
-      </form>
-    </div>
+    </form>
   </div>
+</div>
+
+
+
+
+
+<div id="chat-page" class="hidden">
+  <div class="container">
+    <div class="chat-header">
+      <h1 style="color: black">Live Chat </h1>
+    </div>
+    <div class="connecting">
+      Connecting...
+    </div>
+    <ul id="messageArea">
+
+    </ul>
+    <form id="messageForm" name="messageForm">
+      <div class="form-group">
+        <div class="input-group clearfix">
+          <input style="margin-top:10px; " type="text" id="message" placeholder="Type a message..." autocomplete="off" class="form-control"/>
+          <button style="margin-top:10px; " type="submit" class="btn btn-danger">Send</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
 
 
 </div>
 
 
--->
+
 
 
 
