--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -90,6 +90,9 @@
             </ul>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" th:href="@{/chatRoom}" style="font-weight: bold;font-family: poppins;">Live Chat</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" th:href="@{/logOut}" style="font-weight: bold;font-family: poppins;">Logout</a>
           </li>
 
