Update password added

--- a/src/main/resources/templates/UserProfile.html
+++ b/src/main/resources/templates/UserProfile.html
@@ -104,6 +104,10 @@
                             <button type="submit"  class="btn btn-danger">Update Name</button>
                         </form>
 
+                        <div class="mt-3">
+                            <a href="/forgot_password" class="btn btn-danger">Update Password</a>
+                        </div>
+
                     </div>
                 </div>
             </div>
