--- a/src/main/resources/templates/reset_password.html
+++ b/src/main/resources/templates/reset_password.html
@@ -53,7 +53,7 @@
 
 <div class="container mt-5">
     <h2>Set New Password</h2>
-    <form action="/set-password" method="Get" onsubmit="return validatePassword()" onreset="resetForm()">
+    <form action="/set-password" method="Post" onsubmit="return validatePassword()" onreset="resetForm()">
         <div class="mb-3">
             <label for="newPassword" class="form-label">New Password</label>
             <input type="password" class="form-control" id="newPassword" name="newPassword" required>
@@ -61,6 +61,10 @@
         <div class="mb-3">
             <label for="newPassword" class="form-label">New Password</label>
             <input type="password" class="form-control" id="newPassword2" name="newPassword2" required>
+        </div>
+        <div class="mb-3">
+            <label for="token" class="form-label">token</label>
+            <input type="token" class="form-control" id="token" name="token" required/>
         </div>
         <button type="submit" class="btn btn-danger">Set Password</button>
     </form>
