--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -167,16 +167,48 @@
             margin-bottom: 50px;
             font-family: poppins;
         }
+
+        .notBought{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 300px;
+            font-weight: bold;
+        }
+
+        .center {
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+            margin-top: 50px;
+        }
     </style>
 </head>
 
 <body>
 
-<div th:if="${#ctx.session.loggedInUser != null}">
+
     <!-- Include the menu bar fragment -->
     <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
     <div id="background"></div>
+
+    <div th:if="${#ctx.session.favoriteLists == null}">
+
+        <p th:text="|You have no favourite movies ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" style="font-family: poppins; font-weight: bold;font-size: 15px; color: white;" ></p>
+
+
+        <div class="center">
+            <a th:href="@{/movie_index}"><button type="button" class="btn btn-danger" title="Store">Go to Movies</button></a>
+        </div>
+
+
+    </div>
+
+    <div th:unless="${#ctx.session.favoriteLists == null}">
 
     <div>
         <h1 th:text="| ${#ctx.session.loggedInUser.getUsername()} Favourite List Of Movies | ">Favourite List</h1>
@@ -197,8 +229,13 @@
 
                             <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;" ></p>
 
-                            <a th:href="@{/movieTrailer(id=${movie.getMovieDb_id()})}">View Videos</a>
-                            <a th:href="@{/deleteFavList(movieId=${movie.getMovieDb_id()})}">Remove</a>
+                            <div class="action_btn" style="margin: 0 auto; display: inline;">
+                                <a th:href="@{/movieTrailer(id=${movie.getMovieDb_id()})}">View Videos</a>
+                                <a th:href="@{/deleteFavList(movieId=${movie.getMovieDb_id()})}"
+                                   class="remove_cart" rel="2">
+                                    <i class="fa fa-heart" style="color: red"></i>
+                                </a>
+                            </div>
 
                         </div>
                     </div>
@@ -209,54 +246,7 @@
     </div>
 
 
-
-
-
-</div>
-
-
-<div  th:unless="${#ctx.session.loggedInUser != null}">
-    <style>
-
-        h2{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 50px;
-            color: darkred;
-            font-weight: bold;
-            -webkit-text-stroke: 3px black;
-        }
-
-        a{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        body{
-            margin: 0;
-        }
-
-        #background1{
-            background-image: url("https://images.unsplash.com/photo-1489599849927-2ee91cede3ba?q=80&w=2670&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D.avif");
-            height: 100vh;
-            width: 100%;
-            background-size: cover;
-            background-position: center center;
-            position: fixed;
-            top: 0;
-            z-index: -1;
-        }
-
-    </style>
-
-    <div id="background1"></div>
-
-
-    <h2>You have to login to get access to this page</h2>
-    <a href ="/" ><button type="button" class="btn btn-primary">Go to Login page</button></a>
-</div>
+    </div>
 
 </body>
 </html>
