--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -263,11 +263,9 @@
                             <p th:text="${movie.getOverview()}" style="overflow: auto; scrollbar-width: none;"></p>
 
                                 <div class="action_btn" style="margin: 0 auto; display: inline;">
-
                                     <a th:href="@{/movieTrailer(id=${movie.getId()})}">View Videos</a>
-
                                     <a th:href="@{/addMovieFavList(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, release_date=${movie.getRelease_date()})}"
-                                       class="remove_cart" rel="2" title="Add to favourite list">
+                                       class="remove_cart" rel="2">
                                         <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
                                     </a>
                                 </div>
