--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -185,6 +185,33 @@
             transform: translate(-50%, -50%);
             margin-top: 50px;
         }
+
+        a.three:link {
+            text-decoration: none;
+        }
+
+        a.three:visited {
+            text-decoration: none;
+        }
+
+        a.three:hover {
+            text-decoration: underline;
+        }
+
+        a.three:active {
+            text-decoration: underline;
+        }
+
+        p.two{
+            color: black;
+        }
+
+        p.two:visited {color:#0000ff;}
+        p.two:hover {font-size:150%;}
+
+        .dropdown-menu{
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        }
     </style>
 </head>
 
@@ -196,13 +223,23 @@
 
     <div id="background"></div>
 
+
+    <div class="dropdown" style=" margin-top: 50px; margin-left: 50px;">
+        <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Recommendations
+        </button>
+        <ul class="dropdown-menu" style=" box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)">
+            <li><a class="three" th:href="@{/movieRecs}" style="text-decoration:none"><p class="two" th:text="${recs}"></p></a></li>
+        </ul>
+    </div>
+
     <div th:if="${#ctx.session.favoriteLists == null}">
 
         <p th:text="|You have no favourite movies ${#ctx.session.loggedInUser.getUsername()} |" class="notBought" style="font-family: poppins; font-weight: bold;font-size: 15px; color: white;" ></p>
 
 
         <div class="center">
-            <a th:href="@{/movie_index}"><button type="button" class="btn btn-danger" title="Store">Go to Movies</button></a>
+            <a th:href="@{/movie_index}"><button type="button" class="btn btn-danger" title="Store" style="margin-top: 100px">Go to Movies</button></a>
         </div>
 
 
