Movie Recs index method and FavouriteList controller method to add favourite movie to movies selected by genre

--- a/src/main/resources/templates/videos.html
+++ b/src/main/resources/templates/videos.html
@@ -110,7 +110,7 @@
 
   </style>
 
-<!--
+
   <style>
 
     .hidden {
@@ -146,9 +146,9 @@
       right: 0;
       margin: 0 auto;
       margin-top: -160px;
-      /*margin-left: 1300px;
+      margin-left: 1300px;
 
-       */
+
       position: fixed;
     }
 
@@ -332,7 +332,7 @@
 
   </style>
 
-  -->
+
 
 
 </head>
@@ -359,7 +359,7 @@
 
 
 
-<!--
+
 
   <div id="username-page">
     <div class="username-page-container">
@@ -405,7 +405,7 @@
 </div>
 
 
--->
+
 
 
 
