--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -178,12 +178,40 @@
             top: 0;
             z-index: -1;
         }
+
+        .message {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: green;
+            font-weight: bold;
+            margin-bottom: 50px;
+            font-family: poppins;
+        }
+
+        .messageDelete {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: red;
+            font-weight: bold;
+            margin-bottom: 50px;
+            font-family: poppins;
+        }
     </style>
 </head>
 <body>
 <div th:replace="~{fragments/menu :: menu-bar}"></div>
 
 <div id="background"></div>
+
+
+<div class="action_btn" style="margin: 0 auto; display: inline;">
+    <div id="message" class="message" th:text="${message}"></div>
+
+    <div id="messageDelete" class="messageDelete" th:text="${messageDelete}"></div>
+
+</div>
 
 <div class="dropdown" style=" margin-top: 50px; margin-left: 50px;">
     <button class="btn btn-danger dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -211,7 +239,14 @@
                     <div class="overlay">
                         <h3 th:text="${movieByGenre.getTitle()}"> Mountain</h3>
                         <p th:text="${movieByGenre.getOverview()}" style="overflow: auto; scrollbar-width: none;" ></p>
-                        <a th:href="@{/movieTrailer(id=${movieByGenre.getId()})}">View Videos</a>
+                        <div class="action_btn" style="margin: 0 auto; display: inline;">
+                            <a th:href="@{/movieTrailer(id=${movieByGenre.getId()})}">View Videos</a>
+                            <!--
+                            <a th:href="@{/addMovieFavList2(movieId=${movieByGenre.getId()}, backdrop_path=${movieByGenre.getBackdrop_path()}, overview=${movieByGenre.getOverview()}, title=${movieByGenre.getTitle()}, release_date=${movieByGenre.getRelease_date()})}"
+                               class="remove_cart" rel="2">
+                                <i class="fa fa-heart" th:style="${movieByGenre.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
+                            </a> -->
+                        </div>
                     </div>
                 </div>
             </div>
