Searching for movies on the movie page

--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -225,6 +225,12 @@
 </div>
 
 
+<form class="d-flex" role="search" method="get" action="/viewMovieBySearchOnParticularGenre">
+    <input class="form-control me-2" type="search" placeholder="Enter movie name here" aria-label="Search" id="query" name="query" style="width:250px; margin-left: 1350px">
+    <button class="btn btn-danger" type="submit">Search</button>
+</form>
+
+
 
     <h1 th:text="|${genreName} Movies|"></h1>
 
