--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
+  <link rel="stylesheet" href="static/css/navBarCss.css"/>
 
   <style>
     .cartNumber{
@@ -19,9 +20,12 @@
       background:blue;
     }
 
+
     .nav-link active{
       font-weight: bold;
     }
+
+
 
   </style>
 </head>
@@ -29,7 +33,8 @@
 <!-- The next line allows us to include the menu bar in other thymeleaf template files -->
 <div th:fragment="menu-bar">
 
-  <nav class="navbar navbar-expand-lg " style="background-color: red">
+
+  <nav class="navbar navbar-expand-lg " style=" background-color: #D70040">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +48,7 @@
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: bold;font-family: poppins;">
-             Movies
+              Movies
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li class="nav-item">
@@ -82,7 +87,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: bold;font-family: poppins;"  th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}">
-             Admin Panel
+              Admin Panel
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li th:if="${#ctx.session.loggedInUser != null && #ctx.session.loggedInUser.isAdmin() == true}" ><a class="dropdown-item" th:href="@{/adminPanel_index}" style="font-weight: bold;font-family: poppins;">Admin Movie Product Panel</a></li>
@@ -109,9 +114,27 @@
 
 
   </nav>
+
   <!--<div th:replace="~{fragments/language_menu :: language-menu-bar}"></div>-->
 
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+
+  function showSidebar(){
+
+    const sidebar = document.querySelector('.sidebar')
+    sidebar.style.display = 'flex'
+  }
+
+
+  function hideSidebar(){
+
+    const  sidebar = document.querySelector('.sidebar')
+    sidebar.style.display = 'none'
+  }
+</script>
+
 </body>
 </html>
