--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,9 @@
             crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="/css/navBarCss.css"/>
+
+
 
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 
