Review Functionality added to movies page by genre and favourite list.

--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -272,6 +272,11 @@
                                    class="remove_cart" rel="2">
                                     <i class="fa fa-heart" style="color: red"></i>
                                 </a>
+                                <a th:href="@{/writeReview(movieId=${movie.movieDb_id}, movieTitle=${movie.title})}">
+                                    Write a Review
+                                </a>
+
+
                             </div>
 
                         </div>
