FavouriteList modifications added to search in the movie page

--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -253,6 +253,10 @@
                                 <i class="fa fa-heart" th:style="${movieByGenre.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
                             </a>
                         </div>
+
+                        <a th:href="@{/writeReview(movieId=${movieByGenre.getId()}, movieTitle=${movieByGenre.getTitle()})}">
+                            Write a Review
+                        </a>
                     </div>
                 </div>
             </div>
