Page that displays the movie recs based on genre that occurs most in users fav list of movies

--- a/src/main/resources/templates/movie_recs.html
+++ b/src/main/resources/templates/movie_recs.html
@@ -221,6 +221,7 @@
     </button>
     <ul class="dropdown-menu" style=" box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19)">
       <li><a class="three" th:href="@{/movieRecs}" style="text-decoration:none"><p class="two" th:text="${recs1}"></p></a></li>
+      <li><a class="three" th:href="@{/movieRecsGenreCommon}" style="text-decoration:none"><p class="two" th:text="${recs2}"></p></a></li>
     </ul>
   </div>
 
