FavouriteList implemented on recommendations based on most common genre in users favourite list
A session is being used to hold the most common genre so that in the add fav list method it stays on that page based on the most common genre id in users fav list

--- a/src/main/resources/templates/movie_recsGenre.html
+++ b/src/main/resources/templates/movie_recsGenre.html
@@ -226,7 +226,7 @@
     </div>
 
     <div>
-        <h1 th:text=" | Reccomendations for ${#ctx.session.loggedInUser.getUsername()} on movie genre ${genreName} |"></h1>
+        <h1 th:text=" |${genreName} movie Reccomendations |"></h1>
     </div>
 
     <div class="action_btn" style="margin: 0 auto; display: inline;">
