--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -246,7 +246,7 @@
                         <h3 th:text="${movieByGenre.getTitle()}"> Mountain</h3>
                         <p th:text="${movieByGenre.getOverview()}" style="overflow: auto; scrollbar-width: none;" ></p>
                         <div class="action_btn" style="margin: 0 auto; display: inline;">
-                            <a th:href="@{/movieTrailer(id=${movieByGenre.getId()})}">View Videos</a>
+                            <a th:href="@{/getAllChatMessage(id=${movieByGenre.getId()})}">View Videos & Live Chat Room</a>
 
                             <a th:href="@{/addMovieFavList2(movieId=${movieByGenre.getId()}, backdrop_path=${movieByGenre.getBackdrop_path()}, overview=${movieByGenre.getOverview()}, title=${movieByGenre.getTitle()}, release_date=${movieByGenre.getRelease_date()})}"
                                class="remove_cart" rel="2">
