added the href for movie api reviews page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -212,6 +212,8 @@
             <li><a class="dropdown-item" href="/highestRated">Highest Rated Movies</a></li>
             <li><a class="dropdown-item" href="/lowestRated">Lowest Rated Movies</a></li>
             <li><a class="dropdown-item" href="/userReviews">View My Reviews</a></li>
+            <li><a class="dropdown-item" href="/popularReviews">API Reviews</a></li>
+
         </ul>
     </div>
 
