Random Recommendations method to get random movies added to index controller and nav bar modifications

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -77,6 +77,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" th:href="@{/movie_index}">Movies</a></li>
               <li><a class="dropdown-item" th:href="@{/favList}">Favourite List</a></li>
+              <li><a class="dropdown-item" th:href="@{/movie_recs}">Recommendations</a></li>
             </ul>
           </li>
 
