--- a/src/main/resources/templates/movie_recsGenre.html
+++ b/src/main/resources/templates/movie_recsGenre.html
@@ -248,7 +248,7 @@
                             <div class="action_btn" style="margin: 0 auto; display: inline;">
                                 <a th:href="@{/getAllChatMessage(id=${movie.getId()})}">View Videos & Live Chat Room</a>
 
-                                <a th:href="@{/addMovieFavList6(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()})}"
+                                <a th:href="@{/addMovieFavList6(movieId=${movie.getId()}, backdrop_path=${movie.getBackdrop_path()}, overview=${movie.getOverview()}, title=${movie.getTitle()}, genreId=${movie.getGenre_ids()[0]})}"
                                    class="remove_cart" rel="2">
                                     <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
                                 </a>
