--- a/src/main/resources/templates/loginSuccessful.html
+++ b/src/main/resources/templates/loginSuccessful.html
@@ -221,6 +221,12 @@
                 <i class="fa fa-heart" th:style="${movie.isFavourite() == true} ? 'color: red' : 'color: black'"></i>
               </a>
             </div>
+
+            <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 10px;">
+
+              <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreName()}"></span>
+            </div>
+
           </div>
         </div>
       </div>
