--- a/src/main/resources/templates/movie_index.html
+++ b/src/main/resources/templates/movie_index.html
@@ -7,7 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
 
-
     <title>Title</title>
 
     <style>
@@ -254,9 +253,13 @@
                             </a>
                         </div>
 
-                        <a th:href="@{/writeReview(movieId=${movieByGenre.getId()}, movieTitle=${movieByGenre.getTitle()})}">
-                            Write a Review
-                        </a>
+                        <div class="action_btn" style="margin: 0 auto; display: inline; margin-top: 10px;">
+                            <a th:href="@{/writeReview(movieId=${movieByGenre.id}, movieTitle=${movieByGenre.title})}">
+                                Write a Review
+                            </a>
+
+                            <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movieByGenre.getGenreName()}"></span>
+                        </div>
                     </div>
                 </div>
             </div>
