Adding genreName and genreId to favlist Table and sql inserts changing

--- a/src/main/resources/templates/favList.html
+++ b/src/main/resources/templates/favList.html
@@ -277,7 +277,7 @@
                                 Write a Review
                             </a>
 
-                            <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreId()}"></span>
+                            <span class="badge text-bg-danger" style="background-color: black; color: white; font-weight: bold;  border-radius: 50px; margin-left: 20px" th:text="${movie.getGenreName()}"></span>
                             </div>
 
                         </div>
