View all general users page and nav bar modified for page

--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -117,6 +117,7 @@
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" th:href="@{/adminPanel_index}">Admin Movie Product Panel</a></li>
               <li><a class="dropdown-item" th:href="@{/adminPanelStats}">Statistics</a></li>
+              <li><a class="dropdown-item" th:href="@{/updateToAdmin}">View all General Users</a></li>
             </ul>
           </li>
 
